# voiceprobe

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.ja.md  README.md  README.zh.md  pyproject.toml
.github/workflows/: ci.yml
docs/: backends.example.json  real-endpoints.md
docs/assets/: make_demo_gif.py
scripts/: smoke.sh
src/voiceprobe/: __init__.py  audio.py  cli.py  clock.py  config.py  metrics.py  pipeline.py  runner.py  scenario.py
src/voiceprobe/backends/: __init__.py  base.py  energy.py  http.py  mock.py
src/voiceprobe/report/: __init__.py  html.py
tests/: conftest.py  fake_openai.py  test_audio.py  test_cli.py  test_clock.py  test_energy_vad.py  test_http_backends.py  test_metrics.py  test_mock_backends.py  test_pipeline.py  test_report.py  test_runner.py  test_scenario.py
