[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "voiceprobe"
version = "0.1.0"
description = "Load testing and per-stage latency profiling (VAD/STT/LLM/TTS) for voice agents, with self-contained waterfall and flamegraph reports."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "JaydenCJ" }]
keywords = [
  "voice-agent",
  "load-testing",
  "latency",
  "profiling",
  "stt",
  "tts",
  "llm",
  "vad",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Testing :: Traffic Generation",
  "Topic :: System :: Benchmark",
]
# voiceprobe is intentionally dependency-free: stdlib only at runtime.
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[project.scripts]
voiceprobe = "voiceprobe.cli:main"

[project.urls]
Homepage = "https://github.com/JaydenCJ/voiceprobe"
Issues = "https://github.com/JaydenCJ/voiceprobe/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
